// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders the complete signed-in navigation and distinct online/offline confirmations 1`] = `
"<a className="skip-link" href="#app-content">
  "Skip to content"
<header className="app-header">
  <h1 className="brand__name" style={"display":"flex","alignItems":"center","gap":10}>
    <svg aria-hidden="true" focusable="false" height=30 viewBox="0 0 32 32" width=30>
      <circle cx="16" cy="16" fill="var(--primary-soft)" r="16">
      <path d="M16 24c-5 0-8-3.2-8-8 4.8 0 7.8 3 8 8z" fill="var(--primary)">
      <path d="M16 24c5 0 8-3.2 8-8-4.8 0-7.8 3-8 8z" fill="var(--primary)" opacity="0.72">
      <path d="M16 8v16" stroke="var(--primary-strong)" strokeLinecap="round" strokeWidth="1.8">
    "Fathom"
  <button className="btn btn--help btn--small" type="button">
    <svg aria-hidden="true" fill="none" focusable="false" height=15 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=15>
      <path d="M6 3.5h3l1.5 4-2 1.5a11.5 11.5 0 0 0 5 5l1.5-2 4 1.5v3a2 2 0 0 1-2 2A14 14 0 0 1 4 5.5a2 2 0 0 1 2-2z">
    "Get help"
<main className="app-main" id="app-content">
  <div className="view-enter" style={"display":"flex","flexDirection":"column","gap":"var(--space-4)"}>
    <div className="nav-row row row--wrap row--between">
      <nav aria-label="Main navigation" className="nav-tabs">
        <button aria-current="page" className="nav-tabs__item" type="button">
          <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
            <path d="M3 11.5 12 4l9 7.5">
            <path d="M5.5 10v10h13V10">
          "Today"
        <button className="nav-tabs__item" type="button">
          <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
            <path d="M6.5 3H18a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H6.5A2.5 2.5 0 0 1 4 18.5v-13A2.5 2.5 0 0 1 6.5 3z">
            <path d="M8 3v18">
            <path d="M11.5 8.5h4">
          "History"
        <button className="nav-tabs__item" type="button">
          <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
            <path d="M12 3l1.7 4.6L18.3 9l-4.6 1.4L12 15l-1.7-4.6L5.7 9l4.6-1.4L12 3z">
            <path d="M18.5 15l.8 2.2 2.2.8-2.2.8-.8 2.2-.8-2.2-2.2-.8 2.2-.8.8-2.2z">
          "Patterns"
        <button className="nav-tabs__item" type="button">
          <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
            <circle cx="12" cy="12" r="9">
            <path d="M9.6 9.6a2.4 2.4 0 1 1 3.3 2.2c-.8.34-1.3.95-1.3 1.9">
            <path d="M11.6 16.6v.1">
          "Question"
      <div className="more" ref={"current":null}>
        <button aria-expanded=true aria-haspopup="menu" className="nav-tabs__item" ref={"current":null} type="button">
          <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
            <circle cx="5" cy="12" fill="currentColor" r="1.6" stroke="none">
            <circle cx="12" cy="12" fill="currentColor" r="1.6" stroke="none">
            <circle cx="19" cy="12" fill="currentColor" r="1.6" stroke="none">
          "More"
          <svg aria-hidden="true" fill="none" focusable="false" height=13 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=13>
            <path d="M6 9.5l6 6 6-6">
        <div aria-label="More" className="more__menu" role="menu">
          <button className="more__item" role="menuitem" type="button">
            <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
              <path d="M9 4.5H7A1.5 1.5 0 0 0 5.5 6v13A1.5 1.5 0 0 0 7 20.5h10a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 17 4.5h-2">
              <rect height="3" rx="1" width="6" x="9" y="3">
            "Measures"
          <button className="more__item" role="menuitem" type="button">
            <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
              <path d="M12 20s-7-4.3-9-8.5C1.6 8.6 3.6 5.5 6.8 5.5c1.9 0 3.6 1 4.2 2.6.6-1.6 2.3-2.6 4.2-2.6 3.2 0 5.2 3.1 3.8 6-2 4.2-7 8.5-7 8.5z">
            "Safety plan"
          <button className="more__item" role="menuitem" type="button">
            <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
              <circle cx="18" cy="5.5" r="2.4">
              <circle cx="6" cy="12" r="2.4">
              <circle cx="18" cy="18.5" r="2.4">
              <path d="M8.2 10.8l7.6-4.1">
              <path d="M8.2 13.2l7.6 4.1">
            "Share"
          <button className="more__item" role="menuitem" type="button">
            <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
              <path d="M4 7h7">
              <path d="M16.5 7H20">
              <circle cx="13.5" cy="7" r="2.2">
              <path d="M4 17h3">
              <path d="M12.5 17H20">
              <circle cx="9.5" cy="17" r="2.2">
            "Settings"
          <button className="more__item" role="menuitem" type="button">
            <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
              <path d="M12 3l7 3v5c0 4.5-3 7.6-7 9.2C8 18.6 5 15.5 5 11V6z">
              <path d="M9 11.6l2.1 2.1 4-4.2">
            "Privacy"
          <button className="more__item more__item--danger" role="menuitem" type="button">
            <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
              <path d="M9.5 4H6a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h3.5">
              <path d="M15.5 8l4 4-4 4">
              <path d="M19.5 12h-10">
            "Sign out (this device)"
    <section>
      <p>
        "Today screen"
      <button>
        "Commit online"
      <button>
        "Park offline"
      <button>
        "Entry help"
    <p className="note note--muted" style={"whiteSpace":"pre-wrap"}>
      "Signed in as alice"
  <nav aria-label="Main navigation" className="bottom-nav">
    <button aria-current="page" className="bottom-nav__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=21 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=21>
        <path d="M3 11.5 12 4l9 7.5">
        <path d="M5.5 10v10h13V10">
      "Today"
    <button className="bottom-nav__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=21 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=21>
        <path d="M6.5 3H18a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H6.5A2.5 2.5 0 0 1 4 18.5v-13A2.5 2.5 0 0 1 6.5 3z">
        <path d="M8 3v18">
        <path d="M11.5 8.5h4">
      "History"
    <button className="bottom-nav__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=21 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=21>
        <path d="M12 3l1.7 4.6L18.3 9l-4.6 1.4L12 15l-1.7-4.6L5.7 9l4.6-1.4L12 3z">
        <path d="M18.5 15l.8 2.2 2.2.8-2.2.8-.8 2.2-.8-2.2-2.2-.8 2.2-.8.8-2.2z">
      "Patterns"
    <button className="bottom-nav__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=21 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=21>
        <circle cx="12" cy="12" r="9">
        <path d="M9.6 9.6a2.4 2.4 0 1 1 3.3 2.2c-.8.34-1.3.95-1.3 1.9">
        <path d="M11.6 16.6v.1">
      "Question"
    <div className="more more--up" ref={"current":null}>
      <button aria-expanded=false aria-haspopup="menu" className="nav-tabs__item" ref={"current":null} type="button">
        <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
          <circle cx="5" cy="12" fill="currentColor" r="1.6" stroke="none">
          <circle cx="12" cy="12" fill="currentColor" r="1.6" stroke="none">
          <circle cx="19" cy="12" fill="currentColor" r="1.6" stroke="none">
        "More"
        <svg aria-hidden="true" fill="none" focusable="false" height=13 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=13>
          <path d="M6 9.5l6 6 6-6">
  <div aria-live="polite" className="toast-host" role="status">
    <div className="toast">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <path d="M5 12.5l4.5 4.5L19 7.5">
      "Saved."
    <div className="toast">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <path d="M12 4 2.8 20h18.4z">
        <path d="M12 10v4.2">
        <path d="M12 17.4v.1">
      "Saved offline — it will sync when you're back.""
`;

exports[`renders the complete signed-in navigation and distinct online/offline confirmations 2`] = `
"<a className="skip-link" href="#app-content">
  "Skip to content"
<header className="app-header">
  <h1 className="brand__name" style={"display":"flex","alignItems":"center","gap":10}>
    <svg aria-hidden="true" focusable="false" height=30 viewBox="0 0 32 32" width=30>
      <circle cx="16" cy="16" fill="var(--primary-soft)" r="16">
      <path d="M16 24c-5 0-8-3.2-8-8 4.8 0 7.8 3 8 8z" fill="var(--primary)">
      <path d="M16 24c5 0 8-3.2 8-8-4.8 0-7.8 3-8 8z" fill="var(--primary)" opacity="0.72">
      <path d="M16 8v16" stroke="var(--primary-strong)" strokeLinecap="round" strokeWidth="1.8">
    "Fathom"
  <button className="btn btn--help btn--small" type="button">
    <svg aria-hidden="true" fill="none" focusable="false" height=15 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=15>
      <path d="M6 3.5h3l1.5 4-2 1.5a11.5 11.5 0 0 0 5 5l1.5-2 4 1.5v3a2 2 0 0 1-2 2A14 14 0 0 1 4 5.5a2 2 0 0 1 2-2z">
    "Get help"
<main className="app-main" id="app-content">
  <div className="view-enter" style={"display":"flex","flexDirection":"column","gap":"var(--space-4)"}>
    <div className="nav-row row row--wrap row--between">
      <nav aria-label="Main navigation" className="nav-tabs">
        <button className="nav-tabs__item" type="button">
          <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
            <path d="M3 11.5 12 4l9 7.5">
            <path d="M5.5 10v10h13V10">
          "Today"
        <button className="nav-tabs__item" type="button">
          <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
            <path d="M6.5 3H18a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H6.5A2.5 2.5 0 0 1 4 18.5v-13A2.5 2.5 0 0 1 6.5 3z">
            <path d="M8 3v18">
            <path d="M11.5 8.5h4">
          "History"
        <button className="nav-tabs__item" type="button">
          <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
            <path d="M12 3l1.7 4.6L18.3 9l-4.6 1.4L12 15l-1.7-4.6L5.7 9l4.6-1.4L12 3z">
            <path d="M18.5 15l.8 2.2 2.2.8-2.2.8-.8 2.2-.8-2.2-2.2-.8 2.2-.8.8-2.2z">
          "Patterns"
        <button className="nav-tabs__item" type="button">
          <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
            <circle cx="12" cy="12" r="9">
            <path d="M9.6 9.6a2.4 2.4 0 1 1 3.3 2.2c-.8.34-1.3.95-1.3 1.9">
            <path d="M11.6 16.6v.1">
          "Question"
      <div className="more" ref={"current":null}>
        <button aria-expanded=true aria-haspopup="menu" className="nav-tabs__item" ref={"current":null} type="button">
          <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
            <circle cx="5" cy="12" fill="currentColor" r="1.6" stroke="none">
            <circle cx="12" cy="12" fill="currentColor" r="1.6" stroke="none">
            <circle cx="19" cy="12" fill="currentColor" r="1.6" stroke="none">
          "More"
          <svg aria-hidden="true" fill="none" focusable="false" height=13 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=13>
            <path d="M6 9.5l6 6 6-6">
        <div aria-label="More" className="more__menu" role="menu">
          <button className="more__item" role="menuitem" type="button">
            <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
              <path d="M9 4.5H7A1.5 1.5 0 0 0 5.5 6v13A1.5 1.5 0 0 0 7 20.5h10a1.5 1.5 0 0 0 1.5-1.5V6A1.5 1.5 0 0 0 17 4.5h-2">
              <rect height="3" rx="1" width="6" x="9" y="3">
            "Measures"
          <button className="more__item" role="menuitem" type="button">
            <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
              <path d="M12 20s-7-4.3-9-8.5C1.6 8.6 3.6 5.5 6.8 5.5c1.9 0 3.6 1 4.2 2.6.6-1.6 2.3-2.6 4.2-2.6 3.2 0 5.2 3.1 3.8 6-2 4.2-7 8.5-7 8.5z">
            "Safety plan"
          <button className="more__item" role="menuitem" type="button">
            <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
              <circle cx="18" cy="5.5" r="2.4">
              <circle cx="6" cy="12" r="2.4">
              <circle cx="18" cy="18.5" r="2.4">
              <path d="M8.2 10.8l7.6-4.1">
              <path d="M8.2 13.2l7.6 4.1">
            "Share"
          <button aria-current="page" className="more__item" role="menuitem" type="button">
            <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
              <path d="M4 7h7">
              <path d="M16.5 7H20">
              <circle cx="13.5" cy="7" r="2.2">
              <path d="M4 17h3">
              <path d="M12.5 17H20">
              <circle cx="9.5" cy="17" r="2.2">
            "Settings"
          <button className="more__item" role="menuitem" type="button">
            <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
              <path d="M12 3l7 3v5c0 4.5-3 7.6-7 9.2C8 18.6 5 15.5 5 11V6z">
              <path d="M9 11.6l2.1 2.1 4-4.2">
            "Privacy"
          <button className="more__item more__item--danger" role="menuitem" type="button">
            <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
              <path d="M9.5 4H6a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h3.5">
              <path d="M15.5 8l4 4-4 4">
              <path d="M19.5 12h-10">
            "Sign out (this device)"
    <p>
      "Settings screen"
    <button>
      "Open stored plan"
    <button>
      "Finish password change"
    <p className="note note--muted" style={"whiteSpace":"pre-wrap"}>
      "Signed in as alice"
  <nav aria-label="Main navigation" className="bottom-nav">
    <button className="bottom-nav__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=21 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=21>
        <path d="M3 11.5 12 4l9 7.5">
        <path d="M5.5 10v10h13V10">
      "Today"
    <button className="bottom-nav__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=21 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=21>
        <path d="M6.5 3H18a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1H6.5A2.5 2.5 0 0 1 4 18.5v-13A2.5 2.5 0 0 1 6.5 3z">
        <path d="M8 3v18">
        <path d="M11.5 8.5h4">
      "History"
    <button className="bottom-nav__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=21 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=21>
        <path d="M12 3l1.7 4.6L18.3 9l-4.6 1.4L12 15l-1.7-4.6L5.7 9l4.6-1.4L12 3z">
        <path d="M18.5 15l.8 2.2 2.2.8-2.2.8-.8 2.2-.8-2.2-2.2-.8 2.2-.8.8-2.2z">
      "Patterns"
    <button className="bottom-nav__item" type="button">
      <svg aria-hidden="true" fill="none" focusable="false" height=21 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=21>
        <circle cx="12" cy="12" r="9">
        <path d="M9.6 9.6a2.4 2.4 0 1 1 3.3 2.2c-.8.34-1.3.95-1.3 1.9">
        <path d="M11.6 16.6v.1">
      "Question"
    <div className="more more--up" ref={"current":null}>
      <button aria-current="page" aria-expanded=false aria-haspopup="menu" className="nav-tabs__item" ref={"current":null} type="button">
        <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
          <circle cx="5" cy="12" fill="currentColor" r="1.6" stroke="none">
          <circle cx="12" cy="12" fill="currentColor" r="1.6" stroke="none">
          <circle cx="19" cy="12" fill="currentColor" r="1.6" stroke="none">
        "More"
        <svg aria-hidden="true" fill="none" focusable="false" height=13 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=13>
          <path d="M6 9.5l6 6 6-6">
  <div aria-live="polite" className="toast-host" role="status">
    <div className="toast">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <path d="M5 12.5l4.5 4.5L19 7.5">
      "Saved."
    <div className="toast">
      <svg aria-hidden="true" fill="none" focusable="false" height=16 stroke="currentColor" strokeLinecap="round" strokeLinejoin="round" strokeWidth=1.8 viewBox="0 0 24 24" width=16>
        <path d="M12 4 2.8 20h18.4z">
        <path d="M12 10v4.2">
        <path d="M12 17.4v.1">
      "Saved offline — it will sync when you're back.""
`;
